Submenu visual fixes, hide on smaller screens; remove RSS link

--- a/src/wp-content/themes/tuleva/css/main.css
+++ b/src/wp-content/themes/tuleva/css/main.css
@@ -15818,12 +15818,7 @@ sup {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-bottom: 40px;
-  padding-top: 40px;
+  margin: 3rem 0;
   -webkit-box-shadow: inset 0 -1px 0 0 #D6DEE6;
   box-shadow: inset 0 -1px 0 0 #D6DEE6;
 }
@@ -15843,30 +15838,22 @@ sup {
 }
 .submenu__item a {
   display: block;
-  padding: 1rem 1.5rem;
-  color: #002f63;
+  padding: 1rem 1.25rem;
+  text-decoration: none;
+}
+.submenu__item a:hover {
+  -webkit-box-shadow: inset 0 -1px 0 0 currentColor;
+  box-shadow: inset 0 -1px 0 0 currentColor;
 }
 .submenu__item--current a {
+  color: #002f63;
   font-weight: bold;
-  -webkit-box-shadow: inset 0 -4px 0 0 #006CE6;
-  box-shadow: inset 0 -4px 0 0 #006CE6;
+  -webkit-box-shadow: inset 0 -2px 0 0 currentColor;
+  box-shadow: inset 0 -2px 0 0 currentColor;
 }
-@media (max-width: 575.98px) {
-  .submenu__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 100%;
-  }
-  .submenu__item {
-    -webkit-box-shadow: inset 0 -1px 0 0 #D6DEE6;
-    box-shadow: inset 0 -1px 0 0 #D6DEE6;
-  }
-  .submenu__item a {
-    font-size: 1rem;
-    text-align: center;
+@media (max-width: 767.98px) {
+  .submenu {
+    display: none;
   }
 }
 
