--- a/src/wp-content/themes/tuleva/scss/_components.scss
+++ b/src/wp-content/themes/tuleva/scss/_components.scss
@@ -526,9 +526,7 @@
 .submenu {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-bottom: 40px;
-    padding-top: 40px;
+    margin: 3rem 0;
     box-shadow: inset 0 -1px 0 0 $gray-border-2;
     &__list {
         display: flex;
@@ -542,25 +540,21 @@
         line-height: 1.6;
         a {
             display: block;
-            padding: 1rem 1.5rem;
-            color: $navy-blue;
+            padding: 1rem 1.25rem;
+            text-decoration: none;
+            &:hover {
+                box-shadow: inset 0 -1px 0 0 currentColor;
+            }
         }
         &--current a {
+            color: $text-navy;
             font-weight: bold;
-            box-shadow: inset 0 -4px 0 0 $blue;
+            box-shadow: inset 0 -2px 0 0 currentColor;
         }
     }
-    @include media-breakpoint-down(sm) {
-        &__list {
-            flex-direction: column;
-            width: 100%;
-        }
-        &__item {
-            box-shadow: inset 0 -1px 0 0 $gray-border-2;
-            a {
-                font-size: $font-size-base;
-                text-align: center;
-            }
+    @include media-breakpoint-down(md) {
+        & {
+            display: none;
         }
     }
 }
